Added more query options for /meals
